--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 GROUP=com.github.akarnokd
-VERSION_NAME=3.0.0-RC8
-version=3.0.0-RC8
+VERSION_NAME=3.0.0
+version=3.0.0
 
 POM_ARTIFACT_ID=rxjava3-retrofit-adapter
 POM_NAME=RxJava 3 adapter for Retrofit 2
